--- a/htmlfile/cssfile/imgfile/class12.css
+++ b/htmlfile/cssfile/imgfile/class12.css
@@ -23,6 +23,7 @@
     transform:skew(20deg); */
     transition: all 0.5s linear;
     transform:scale(1);
+    overflow:hidden;  /*overflow added to hide the inner div*/
 
 }
 .inner{
